system log added to category controller, fixed category route and added appropriate middleware
